--- a/Storyboards/MyWorkCycle.storyboard
+++ b/Storyboards/MyWorkCycle.storyboard
@@ -28,32 +28,81 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="134"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pWn-Ov-RuT">
-                                                    <rect key="frame" x="20" y="11" width="353" height="112"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pWn-Ov-RuT" customClass="FAUGradientView" customModule="WorkoutCycle" customModuleProvider="target">
+                                                    <rect key="frame" x="20" y="11" width="363" height="112"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ue9-cC-LeW">
-                                                            <rect key="frame" x="138.33333333333334" y="38" width="76.666666666666657" height="36"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ue9-cC-LeW">
+                                                            <rect key="frame" x="112" y="38" width="241" height="36"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xhd-Ci-8Sm">
+                                                            <rect key="frame" x="10" y="10" width="92" height="92"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sfa-AS-eQY">
+                                                                    <rect key="frame" x="10" y="10" width="72" height="72"/>
+                                                                    <userDefinedRuntimeAttributes>
+                                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                                            <real key="value" value="1"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                            <real key="value" value="35"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                                            <color key="value" red="0.99520033600000002" green="0.74975043539999997" blue="0.1103985384" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                    </userDefinedRuntimeAttributes>
+                                                                </imageView>
+                                                            </subviews>
+                                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="xhd-Ci-8Sm" secondAttribute="height" multiplier="1:1" id="PYF-wy-vYa"/>
+                                                                <constraint firstItem="sfa-AS-eQY" firstAttribute="top" secondItem="xhd-Ci-8Sm" secondAttribute="top" constant="10" id="SMg-j3-e2f"/>
+                                                                <constraint firstAttribute="trailing" secondItem="sfa-AS-eQY" secondAttribute="trailing" constant="10" id="ZOn-bq-GFD"/>
+                                                                <constraint firstItem="sfa-AS-eQY" firstAttribute="leading" secondItem="xhd-Ci-8Sm" secondAttribute="leading" constant="10" id="kc6-tQ-Lzl"/>
+                                                                <constraint firstAttribute="bottom" secondItem="sfa-AS-eQY" secondAttribute="bottom" constant="10" id="o8i-ab-GgE"/>
+                                                            </constraints>
+                                                        </view>
                                                     </subviews>
-                                                    <color key="backgroundColor" systemColor="systemGray6Color"/>
                                                     <constraints>
-                                                        <constraint firstItem="ue9-cC-LeW" firstAttribute="centerX" secondItem="pWn-Ov-RuT" secondAttribute="centerX" id="E3N-Cm-8I1"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ue9-cC-LeW" secondAttribute="trailing" constant="10" id="LMS-DI-FzJ"/>
+                                                        <constraint firstItem="ue9-cC-LeW" firstAttribute="leading" secondItem="xhd-Ci-8Sm" secondAttribute="trailing" constant="10" id="M96-TQ-6tY"/>
+                                                        <constraint firstItem="xhd-Ci-8Sm" firstAttribute="leading" secondItem="pWn-Ov-RuT" secondAttribute="leading" constant="10" id="Pj0-H0-FJo"/>
                                                         <constraint firstAttribute="height" constant="100" id="RUe-xQ-5WD"/>
-                                                        <constraint firstItem="ue9-cC-LeW" firstAttribute="centerY" secondItem="pWn-Ov-RuT" secondAttribute="centerY" id="kQv-NY-Kzp"/>
+                                                        <constraint firstItem="ue9-cC-LeW" firstAttribute="centerY" secondItem="pWn-Ov-RuT" secondAttribute="centerY" id="ZHR-Kw-nFh"/>
+                                                        <constraint firstAttribute="bottom" secondItem="xhd-Ci-8Sm" secondAttribute="bottom" constant="10" id="bPC-vf-dgr"/>
+                                                        <constraint firstItem="xhd-Ci-8Sm" firstAttribute="top" secondItem="pWn-Ov-RuT" secondAttribute="top" constant="10" id="njU-ls-lSZ"/>
                                                     </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="firstColor">
+                                                            <color key="value" systemColor="systemGray2Color"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="secondColor">
+                                                            <color key="value" systemColor="systemGray4Color"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="point" keyPath="startPoint">
+                                                            <point key="value" x="0.0" y="1"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="point" keyPath="endPoint">
+                                                            <point key="value" x="1" y="0.0"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="15"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
                                                 </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="pWn-Ov-RuT" firstAttribute="top" secondItem="9Ti-yH-GnE" secondAttribute="topMargin" id="53c-tQ-n8U"/>
                                                 <constraint firstItem="pWn-Ov-RuT" firstAttribute="leading" secondItem="9Ti-yH-GnE" secondAttribute="leadingMargin" id="TY8-9A-MJa"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="pWn-Ov-RuT" secondAttribute="bottom" id="frY-aW-gMl"/>
-                                                <constraint firstItem="pWn-Ov-RuT" firstAttribute="trailing" secondItem="9Ti-yH-GnE" secondAttribute="trailingMargin" id="hsK-5z-Tmp"/>
+                                                <constraint firstItem="pWn-Ov-RuT" firstAttribute="trailing" secondItem="9Ti-yH-GnE" secondAttribute="trailingMargin" constant="10" id="hsK-5z-Tmp"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="listWorkCycleContentView" destination="xhd-Ci-8Sm" id="dbE-Mw-EKr"/>
+                                            <outlet property="listWorkCycleImageView" destination="sfa-AS-eQY" id="gNG-nT-5Ra"/>
                                             <outlet property="listWorkCycleLabel" destination="ue9-cC-LeW" id="JHz-zi-TRz"/>
                                             <outlet property="listWorkCycleView" destination="pWn-Ov-RuT" id="iGw-fq-BVf"/>
                                         </connections>
@@ -89,7 +138,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="26T-A3-AH3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="5JY-me-j4x" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2891" y="1591"/>
+            <point key="canvasLocation" x="2890.8396946564885" y="1590.8450704225354"/>
         </scene>
         <!--Add Work Cycle View Controller-->
         <scene sceneID="hpn-gJ-qB2">
@@ -265,8 +314,11 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
