--- a/Storyboards/Setting.storyboard
+++ b/Storyboards/Setting.storyboard
@@ -227,9 +227,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Hr1-yA-FqP">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="704"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="769"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SettingTableViewCell" textLabel="ex2-DM-mB3" rowHeight="87" style="IBUITableViewCellStyleDefault" id="MsM-nv-dJV" customClass="SettingTableViewCell" customModule="WorkoutCycle" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SettingTableViewCell" textLabel="ex2-DM-mB3" detailTextLabel="d9v-54-Qlk" rowHeight="87" style="IBUITableViewCellStyleValue1" id="MsM-nv-dJV" customClass="SettingTableViewCell" customModule="WorkoutCycle" customModuleProvider="target">
                                         <rect key="frame" x="20" y="55.333332061767578" width="353" height="87"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MsM-nv-dJV" id="24Y-wJ-oZn">
@@ -237,7 +237,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ex2-DM-mB3">
-                                                    <rect key="frame" x="20" y="0.0" width="294.66666666666669" height="87"/>
+                                                    <rect key="frame" x="20" y="37" width="25" height="14.333333333333334"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="d9v-54-Qlk">
+                                                    <rect key="frame" x="282" y="37" width="32.666666666666664" height="14.333333333333334"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                                     <nil key="textColor"/>
@@ -252,26 +259,13 @@
                                     <outlet property="delegate" destination="xWg-J2-MHw" id="CmW-Ml-t4s"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="64z-XZ-C4B">
-                                <rect key="frame" x="20" y="714" width="353" height="35"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="분할 초기화">
-                                    <color key="baseBackgroundColor" systemColor="systemRedColor"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <segue destination="Kkn-2T-6ve" kind="show" identifier="startSegue" id="Y2O-5Q-ru0"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="TMX-Ee-4Zz"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="64z-XZ-C4B" firstAttribute="leading" secondItem="TMX-Ee-4Zz" secondAttribute="leading" constant="20" id="1n1-l5-uaG"/>
                             <constraint firstItem="Hr1-yA-FqP" firstAttribute="trailing" secondItem="TMX-Ee-4Zz" secondAttribute="trailing" id="2PF-dM-Eql"/>
-                            <constraint firstItem="TMX-Ee-4Zz" firstAttribute="bottom" secondItem="64z-XZ-C4B" secondAttribute="bottom" constant="20" id="4qL-Rd-2ei"/>
-                            <constraint firstItem="64z-XZ-C4B" firstAttribute="top" secondItem="Hr1-yA-FqP" secondAttribute="bottom" constant="10" id="JIs-fb-Y1o"/>
+                            <constraint firstItem="TMX-Ee-4Zz" firstAttribute="bottom" secondItem="Hr1-yA-FqP" secondAttribute="bottom" id="I3F-Od-1Y0"/>
                             <constraint firstItem="Hr1-yA-FqP" firstAttribute="top" secondItem="MrT-UZ-ldc" secondAttribute="top" id="OGm-Fp-Zi9"/>
-                            <constraint firstItem="TMX-Ee-4Zz" firstAttribute="trailing" secondItem="64z-XZ-C4B" secondAttribute="trailing" constant="20" id="Yyq-Cu-l3t"/>
                             <constraint firstItem="Hr1-yA-FqP" firstAttribute="leading" secondItem="TMX-Ee-4Zz" secondAttribute="leading" id="ca3-Ol-VGp"/>
                         </constraints>
                     </view>
@@ -281,6 +275,7 @@
                         <segue destination="Crz-sx-YYN" kind="show" identifier="DeveloperSegue" id="XV4-7O-jGp"/>
                         <segue destination="Ij2-YG-VrT" kind="show" identifier="TermofUseSegue" id="SFH-S2-HN9"/>
                         <segue destination="bAX-a9-h91" kind="show" identifier="AlramSegue" id="qbC-I1-3Hk"/>
+                        <segue destination="Kkn-2T-6ve" kind="show" identifier="StartSegue" id="apV-OR-Xf5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GKk-gC-Ojb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -324,9 +319,6 @@
         <image name="gmail" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
